--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.13.4",
     "lodash": "^4.5.1",
     "node-spop": "^1.0.3",
+    "request": "^2.69.0",
     "socket.io": "^1.4.5"
   }
 }
