feat(server): handle all spotify endpoints and expose them in the api

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lodash": "^4.5.1",
     "node-spop": "^1.0.3",
     "request": "^2.69.0",
+    "require-dir": "^0.3.0",
     "socket.io": "^1.4.5"
   }
 }
