feat(radio): add radio related endpoints and handle them on the frontend

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "lodash": "^4.5.1",
+    "lowdb": "^0.12.5",
     "node-spop": "^1.2.0",
     "request": "^2.69.0",
     "require-dir": "^0.3.0",
