--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "text-loader": "0.0.1"
   },
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "^1.15.0",
     "cors": "^2.7.1",
     "express": "^4.13.4",
