--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node node_modules/gulp/bin/gulp.js --env production",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "postinstall": "npm run-script build"
   },
   "repository": {
     "type": "git",
@@ -49,6 +50,7 @@
     "lowdb": "^0.12.5",
     "mplayer": "^2.0.1",
     "node-spop": "^1.2.0",
+    "pm2": "^1.1.3",
     "request": "^2.69.0",
     "require-dir": "^0.3.0",
     "socket.io": "^1.4.5"
