--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node node_modules/gulp/bin/gulp.js --env production",
+    "build": "gulp --env production",
     "start": "node server/index.js",
     "postinstall": "npm run-script build"
   },
