--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "gulp --env production",
-    "start": "node server/index.js",
-    "postinstall": "npm run-script build"
+    "build": "node node_modules/gulp/bin/gulp.js --env production",
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
